# aaa-ds-2024-public

./: Makefile  README.md  pyproject.toml
.github/workflows/: python-app.yml
homework/tasks/: pg_task.py  redis_task.py  reliable_request.py
homework/tests/: conftest.py  test_pg_task.py  test_redis_task.py  test_reliable_request.py
