[tool.poetry]
name = "aaa-distributes-systems"
version = "0.1.0"
description = ""
authors = ["Vladimir Olokhtonov <sgjurano@ya.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.*"
pytest-asyncio = "^0.23.0"
pytest = "^8.1.1"
asyncpg = "^0.29.0"
redis = "^5.0.3"
ruff = "^0.3.3"
httpx = "^0.27.0"
asyncio-simple-http-server = "^0.0.7"
faker = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
